// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CubeTransition> <CubeTransition> Mount: enzyme.mount 1`] = `
.css-0,
[data-css-0] {
  position: relative;
  transform: translate(-25, -25);
  -webkit-transform: translate(-25, -25);
}

.css-0 > div,
[data-css-0] > div {
  animation-fill-mode: both;
  animation: animation_1l238n9 1.6s 0s infinite ease-in-out;
  background-color: #ffffff;
  height: 10px;
  left: -5px;
  position: absolute;
  top: -5px;
  width: 10px;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1l238n9 1.6s 0s infinite ease-in-out;
}

.css-0 > div:last-child,
[data-css-0] > div:last-child {
  animation-delay: -0.8s;
  -webkit-animation-delay: -0.8s;
}

<CubeTransition
  loading={true}
>
  <div
    data-css-0=""
  >
    <div />
    <div />
  </div>
</CubeTransition>
`;

exports[`<CubeTransition> <CubeTransition> Render: enzyme.render 1`] = `
.css-0,
[data-css-0] {
  position: relative;
  transform: translate(-25, -25);
  -webkit-transform: translate(-25, -25);
}

.css-0 > div,
[data-css-0] > div {
  animation-fill-mode: both;
  animation: animation_1l238n9 1.6s 0s infinite ease-in-out;
  background-color: #ffffff;
  height: 10px;
  left: -5px;
  position: absolute;
  top: -5px;
  width: 10px;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1l238n9 1.6s 0s infinite ease-in-out;
}

.css-0 > div:last-child,
[data-css-0] > div:last-child {
  animation-delay: -0.8s;
  -webkit-animation-delay: -0.8s;
}

<div
  data-css-0=""
>
  <div />
  <div />
</div>
`;

exports[`<CubeTransition> <CubeTransition> Shallow: enzyme.shallow 1`] = `
.css-0,
[data-css-0] {
  position: relative;
  transform: translate(-25, -25);
  -webkit-transform: translate(-25, -25);
}

.css-0 > div,
[data-css-0] > div {
  animation-fill-mode: both;
  animation: animation_1l238n9 1.6s 0s infinite ease-in-out;
  background-color: #ffffff;
  height: 10px;
  left: -5px;
  position: absolute;
  top: -5px;
  width: 10px;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1l238n9 1.6s 0s infinite ease-in-out;
}

.css-0 > div:last-child,
[data-css-0] > div:last-child {
  animation-delay: -0.8s;
  -webkit-animation-delay: -0.8s;
}

<div
  data-css-0=""
>
  <div />
  <div />
</div>
`;
